--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,9 +57,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation("com.airbnb.android:lottie:6.3.0")
-
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     apply plugin :"kotlin-kapt"
-
     //Navigation component
     def nav_version = "2.5.2"
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.7"
