--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,12 @@ android {
 dependencies {
     implementation("androidx.core:core-splashscreen:1.0.1")
     implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
     implementation 'com.google.firebase:firebase-storage:21.0.0'
-    implementation 'com.google.firebase:firebase-analytics:22.0.0'
+    implementation 'com.google.firebase:firebase-analytics:22.0.1'
     implementation 'androidx.activity:activity-ktx:1.9.0'
     implementation 'androidx.activity:activity:1.9.0'
     testImplementation 'junit:junit:4.13.2'
@@ -57,7 +57,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation("com.airbnb.android:lottie:6.3.0")
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.1"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     apply plugin :"kotlin-kapt"
     //Navigation component
@@ -91,6 +91,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:23.0.0'
 
     //Coroutines with firebase
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.8.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.8.1'
+
+    implementation("com.github.bumptech.glide:glide:4.16.0")
+    implementation("com.google.code.gson:gson:2.10.1")
+    implementation("com.tbuonomo:dotsindicator:5.0")
 
 }
