--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,15 @@
 
     <application
         android:name=".KelineApplication"
+
         android:allowBackup="true"
         android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_main"
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/Theme.KelineYt"
-        tools:targetApi="tiramisu" >
-        <activity
-            android:name=".activities.MealDetailesActivity"
-            android:exported="false" />
+        tools:targetApi="tiramisu"
+        tools:replace="android:supportsRtl">
         <activity
             android:name=".activities.SplashActivity"
             android:exported="true" >
