--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:22.0.1'
     implementation 'androidx.activity:activity-ktx:1.9.0'
     implementation 'androidx.activity:activity:1.9.0'
+    implementation 'com.google.firebase:firebase-database-ktx:21.0.0'
+    implementation 'com.google.firebase:firebase-database:21.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -70,7 +72,7 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-
+    kapt 'com.github.bumptech.glide:compiler:4.16.0'
     //circular image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
