--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 buildscript {
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.51'
-        classpath 'com.google.gms:google-services:4.4.1'
-
+        classpath 'com.google.gms:google-services:4.4.2'
         def nav_version = "2.5.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.7"
     }
@@ -12,6 +11,7 @@ plugins {
     id 'com.android.application' version '8.4.0' apply false
     id 'com.android.library' version '8.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 tasks.register('clean', Delete) {
