--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
-    implementation 'com.google.firebase:firebase-storage:21.0.0'
-    implementation 'com.google.firebase:firebase-analytics:22.0.1'
     implementation 'androidx.activity:activity-ktx:1.9.0'
-    implementation 'androidx.activity:activity:1.9.0'
-    implementation 'com.google.firebase:firebase-database-ktx:21.0.0'
-    implementation 'com.google.firebase:firebase-database:21.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -63,16 +57,19 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     apply plugin :"kotlin-kapt"
     //Navigation component
-    def nav_version = "2.5.2"
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.7"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.7"
-
+    //google play services
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
+    //intuit
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
     //loading button
     implementation 'br.com.simplepass:loading-button-android:2.2.0'
-
+    //smooth bar
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-    kapt 'com.github.bumptech.glide:compiler:4.16.0'
     //circular image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
@@ -91,12 +88,13 @@ dependencies {
 
     //Firebase
     implementation 'com.google.firebase:firebase-auth:23.0.0'
-
+    implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
+    implementation 'com.google.firebase:firebase-storage:21.0.0'
+    implementation 'com.google.firebase:firebase-analytics:22.0.1'
+    implementation 'com.google.firebase:firebase-database-ktx:21.0.0'
+    implementation 'com.google.firebase:firebase-database:21.0.0'
     //Coroutines with firebase
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.8.1'
-
-    implementation("com.github.bumptech.glide:glide:4.16.0")
-    implementation("com.google.code.gson:gson:2.10.1")
-    implementation("com.tbuonomo:dotsindicator:5.0")
+    //
 
 }
