--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.51'
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
         classpath 'com.google.gms:google-services:4.4.2'
-        def nav_version = "2.5.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.7"
     }
 }
