--- a/settings.gradle
+++ b/settings.gradle
@@ -14,7 +14,7 @@ dependencyResolutionManagement {
         mavenCentral()
         //noinspection JcenterRepositoryObsolete
         jcenter()
-
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "KelineYt"
